Final Project: Further cleaned up code in anticipation of GPU implementation.

--- a/zero_degree/makefile
+++ b/zero_degree/makefile
@@ -3,17 +3,21 @@ SHELL := /bin/bash
 # Example: make run binFile=../sample_input/zero_deg_only/ehall_hallway/bin/frame_0.zeroDeg.bin
 
 run:
-	g++ planeExtraction.cpp fileHandler.cpp dataFrame.cpp cpuImplementation.cpp -Wall -O3 -std=c++17 -o planeExtraction
-	./planeExtraction $(binFile) > out.csv
+	mkdir -p out/
+	g++ zeroDegree.cpp fileHandler.cpp dataFrame.cpp cpuImplementation.cpp -DCPU_IMPLEMENTATION -Wall -O3 -std=c++17 -o zeroDegree
+	./zeroDegree $(binFile) > out/out.csv
 	
-display-overlayed:
-	g++ planeExtraction.cpp fileHandler.cpp dataFrame.cpp cpuImplementation.cpp -DPRINT_INDICES -Wall -O3 -std=c++17 -o planeExtraction
-	python3 ../scripts/zero-degree/displayOverlayed.py <(./planeExtraction $(binFile)) $(binFile)
+display-overlayed-cpu:
+	mkdir -p out/
+	g++ zeroDegree.cpp fileHandler.cpp dataFrame.cpp cpuImplementation.cpp -DCPU_IMPLEMENTATION -DPRINT_INDICES -Wall -O3 -std=c++17 -o zeroDegree
+	python3 ../scripts/zero-degree/displayOverlayed.py <(./zeroDegree $(binFile)) $(binFile) --outFile out/overlayed.png
 
-display-overlayed-no-merge:
-	g++ planeExtraction.cpp fileHandler.cpp dataFrame.cpp cpuImplementation.cpp -DPRINT_INDICES -DSKIP_SEGMENT_MERGING -Wall -O3 -std=c++17 -o planeExtraction
-	python3 ../scripts/zero-degree/displayOverlayed.py <(./planeExtraction $(binFile)) $(binFile)
+display-overlayed-no-merge-cpu:
+	mkdir -p out/
+	g++ zeroDegree.cpp fileHandler.cpp dataFrame.cpp cpuImplementation.cpp -DPRINT_INDICES -DCPU_IMPLEMENTATION -DSKIP_SEGMENT_MERGING -Wall -O3 -std=c++17 -o zeroDegree
+	python3 ../scripts/zero-degree/displayOverlayed.py <(./zeroDegree $(binFile)) $(binFile) --outFile out/overlayed-no-merge.png
 
-display-r-squared:
-	g++ planeExtraction.cpp fileHandler.cpp dataFrame.cpp cpuImplementation.cpp -DPRINT_R_SQUARED -DSKIP_SEGMENT_MERGING -Wall -O3 -std=c++17 -o planeExtraction
-	python3 ../scripts/zero-degree/displayRSquared.py <(./planeExtraction $(binFile))
+display-r-squared-cpu:
+	mkdir -p out/
+	g++ zeroDegree.cpp fileHandler.cpp dataFrame.cpp cpuImplementation.cpp -DPRINT_R_SQUARED -DCPU_IMPLEMENTATION -DSKIP_SEGMENT_MERGING -Wall -O3 -std=c++17 -o zeroDegree
+	python3 ../scripts/zero-degree/displayRSquared.py <(./zeroDegree $(binFile)) --outFile out/r-squared.png
