Final Project: Added explicit output file.

--- a/zero_degree/makefile
+++ b/zero_degree/makefile
@@ -8,20 +8,27 @@ run:
 
 run-cpu:
 	mkdir -p out/
+	rm -f out/out.csv
 	g++ zeroDegree.cpp fileHandler.cpp dataFrame.cpp cpuImplementation.cpp -DCPU_IMPLEMENTATION -Wall -O3 -std=c++17 -o zeroDegree
-	./zeroDegree $(binFile) > out/out.csv
+	./zeroDegree out/out.csv $(binFile)
 	
 display-overlayed-cpu:
 	mkdir -p out/
+	rm -f out/out.csv
 	g++ zeroDegree.cpp fileHandler.cpp dataFrame.cpp cpuImplementation.cpp -DCPU_IMPLEMENTATION -DPRINT_INDICES -Wall -O3 -std=c++17 -o zeroDegree
-	python3 ../scripts/zero-degree/displayOverlayed.py <(./zeroDegree $(binFile)) $(binFile) --outFile out/overlayed.png
+	./zeroDegree out/out.csv $(binFile)
+	python3 ../scripts/zero-degree/displayOverlayed.py out/out.csv $(binFile) --outFile out/overlayed.png
 
 display-overlayed-no-merge-cpu:
 	mkdir -p out/
+	rm -f out/out.csv
 	g++ zeroDegree.cpp fileHandler.cpp dataFrame.cpp cpuImplementation.cpp -DPRINT_INDICES -DCPU_IMPLEMENTATION -DSKIP_SEGMENT_MERGING -Wall -O3 -std=c++17 -o zeroDegree
-	python3 ../scripts/zero-degree/displayOverlayed.py <(./zeroDegree $(binFile)) $(binFile) --outFile out/overlayed-no-merge.png
+	./zeroDegree out/out.csv $(binFile)
+	python3 ../scripts/zero-degree/displayOverlayed.py out/out.csv $(binFile) --outFile out/overlayed-no-merge.png
 
 display-r-squared-cpu:
 	mkdir -p out/
+	rm -f out/out.csv
 	g++ zeroDegree.cpp fileHandler.cpp dataFrame.cpp cpuImplementation.cpp -DPRINT_R_SQUARED -DCPU_IMPLEMENTATION -DSKIP_SEGMENT_MERGING -Wall -O3 -std=c++17 -o zeroDegree
-	python3 ../scripts/zero-degree/displayRSquared.py <(./zeroDegree $(binFile)) --outFile out/r-squared.png
+	./zeroDegree out/out.csv $(binFile)
+	python3 ../scripts/zero-degree/displayRSquared.py out/out.csv --outFile out/r-squared.png
